--- a/trunk/ankieta-psi/src/main/webapp/resources/css/main.css
+++ b/trunk/ankieta-psi/src/main/webapp/resources/css/main.css
@@ -75,72 +75,12 @@ label.error {
 	padding: 8px 15px;
 }
 
-.add-employee, .add-story {
-	font-size: 20px;
-	color: #428bca;
-	margin-top: 5px;
-	cursor: pointer;
+.header-text {
+	color: #9d9d9d;
+	padding: 15px 8px;
+	display: block;
 }
 
-.remove-employee, .remove-story, .add-task, .remove-task {
-	font-size: 20px;
-	cursor: pointer;
-	color: #555;
+.my-header .glyphicon {
+	font-size: 18px;
 }
-
-.table-footer {
-	background-color: rgba(244,244,244,0.3);
-}
-
-.table-footer:hover {
-	background-color: #d9edf7;
-}
-
-.developers-hours-input, .testers-hours-input {
-	width: 50px;
-	margin: 0 auto;
-	text-align: center;
-}
-
-.developers-hours td, .testers-hours td {
-	vertical-align: middle!important;
-}
-
-.hours-summary {
-	background-color: #fcf8e3;
-}
-
-.badge {
-	float: right;
-}
-
-.user-story-tr {
-	background-color: #FAF2CC;
-}
-
-.user-stories tr:hover {
-	cursor: pointer;
-}
-
-.user-stories tr.selected .badge {
-	color: #337ab7;
-	background-color: #fff;
-}
-
-.user-stories tr.story.selected {
-	color: #fff;
-	background-color: #337ab7;
-	border-color: #337ab7;
-}
-
-.user-stories tr.task.selected {
-	color: #31708f;
-	background-color: #c4e3f3;
-}
-
-.user-story-tr .story-number { width:100px; }
-.user-story-tr .story-summary { padding-left:20px; }
-.user-story-tr .story-points { width:100px; }
-
-.hours-state .hours { font-weight: bold; }
-.hours-state .hours.error { color: red }
